objects/PC_Engagement_Program_Service__c.object
<CustomObject>
    <description>Custom junction object to facilitate many-to-many relationships between the Engagement Program and the Service object</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <description>Indicates whether the Engagement Program Service is currently active.</description>
        <formula>IF( (ISBLANK(  PC_End_Date__c ) ||  ISNULL( PC_End_Date__c ) || 
     PC_End_Date__c &gt;= TODAY()) &amp;&amp; NOT(ISBLANK( PC_Start_Date__c )), true, false)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_End_Date__c</fullName>
        <description>Date on which the Service ends for a given Engagement Program.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Engagement_Program__c</fullName>
        <description>Holds the Engagement Program details.</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Engagement Program Services</relationshipLabel>
        <relationshipName>PC_Engagement_Program</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_Notification_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Send a notification for a service using a predefined eLetter template.</description>
        <label>Notification Template</label>
        <referenceTo>PC_eLetter__c</referenceTo>
        <relationshipLabel>Engagement Program Services</relationshipLabel>
        <relationshipName>Engagement_Program_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Service__c</fullName>
        <description>Holds the Service details.</description>
        <label>Service</label>
        <referenceTo>PC_Service__c</referenceTo>
        <relationshipLabel>Engagement Program Services</relationshipLabel>
        <relationshipName>PC_Engagement_Program_Services</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_Start_Date__c</fullName>
        <description>Date on which the Service starts for a given Engagement Program.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Engagement Program Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EPS-{0}</displayFormat>
        <label>Engagement Program Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Program Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>